syntax = "proto3";
package badgeforce_pb;

message Credential {
    string data = 1;
    string signature = 2;
    string issuance_address = 3;
    string storage_hash = 4;
    string template_name = 5;
}

message Issuance {
    string signature = 1;
    string issuer_public_key = 2;
    string recipient_public_key = 3;
    bool revokation_status = 4;
    string proof_of_integrity_hash = 5;
    string storage_hash = 6;
    string template_name = 7;
    string template_address = 8;
    int32 expiration = 9;
}